# Chain-cleavage-Modelling-Paper

./: Chain-Cleavage-Modelling.ipynb  LICENSE.txt  README.md  functions.py  functions_fig3.py  pyproject.toml  requirements.txt  requirements_colab.txt
Figures/SI/: Figure S9_IV5-P,RT,air,steel__Mn_r.csv  Figure S9_IV5-P,RT,air,steel__s.csv  Figure S9_IV5-P,RT,air,steel__scis.csv
